lawrence township school board quick intro update

--- a/child_pages/cc-elections/lawrence_township_school_board.html
+++ b/child_pages/cc-elections/lawrence_township_school_board.html
@@ -250,6 +250,18 @@
             <details>
                 <summary style="cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
                 <p>
+                Lawrence Township voters will choose <strong>one School Board member</strong> in this year’s election. 
+                Two candidates are competing for the single seat on the ballot.
+                </p>
+                <br><br>
+                <p>
+                Of the two, <em>Linda Miletta</em> has been the only candidate to respond to InformTheVoteNJ’s outreach. 
+                She provided a moderate response to our questionnaire, which still represents a higher level of engagement than her opponent to date.
+                </p>
+                <br><br>
+                <p>
+                Publicly available information on the other candidate remains limited as of now. 
+                InformTheVoteNJ will continue seeking input from both candidates and will update this section as more details emerge.
                 </p>
             </details>
         </div>
