fix link to nowhere when clicking on elections from homepage menu

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
             <div class="home">Inform The Vote</div>
             <div class="homepage-links-box">
                 <div class="other-links">
-                    <a href="#" id='navBoxToggle' class="overlay-nav-link">Elections</a>
+                    <span id='navBoxToggle' class="overlay-nav-link">Elections</span>
                     <a href="child_pages/events.html" class="overlay-nav-link">Events</a>
                     <!-- <a href="#" id='navBoxToggle2' class="overlay-nav-link">Issues</a> -->
                     <a href="child_pages/get-involved.html" class="overlay-nav-link">Get Involed</a>
