vineland school board quick intro update

--- a/child_pages/cc-elections/vsb_2024.html
+++ b/child_pages/cc-elections/vsb_2024.html
@@ -264,6 +264,22 @@
             <details>
                 <summary style="cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
                 <p>
+                Vineland voters will choose <strong>three School Board members</strong> in this year’s election. 
+                Eight candidates are on the ballot seeking to guide the district’s direction and policies.
+                </p>
+                <br><br>
+                <p>
+                Of the eight candidates, <em>Luz Vasquez</em> has been the most transparent and accessible, thoroughly answering our 
+                questionnaire and participating in multiple radio interviews, including on our show. 
+                <em>Francisco Santiago</em> provided a thorough response to our questionnaire and has been working to schedule time for an interview. 
+                <em>Makema Douglas</em> gave a moderate response to our questionnaire, did a quick “man on the street” interview at the 
+                Vineland Food Truck Festival, and plans a longer interview in October. 
+                One other candidate reached out but did not follow up on our response.
+                </p>
+                <br><br>
+                <p>
+                Publicly available information on the remaining candidates remains limited at this time. 
+                InformTheVoteNJ will continue seeking input from all candidates and will update this section as more details emerge.
                 </p>
             </details>
         </div>
