--- a/child_pages/cc-elections/state_assembly_legislative_district_1.html
+++ b/child_pages/cc-elections/state_assembly_legislative_district_1.html
@@ -276,46 +276,35 @@
             <details>
                 <summary style="cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
                 <p>
-            
-                    This November, voters in LD1 will decide who fills the district’s two Assembly seats, covering all of Cape May County and parts of Cumberland and Atlantic counties.
-                    <br>
-                    <br>
-                    On the Republican side, Antwan McClellan and Erik Simonsen advanced unopposed. While they’ve consistently attended local Republican breakfasts and maintained a 
-                    visible presence, those appearances often slip under the radar for people who aren’t closely tuned in, and even more so now that the breakfasts are for Republicans 
-                    only— many regular voters simply want to review clear, comprehensive information when the end of election season arrives.
-                    <br>
-                    <br>
-                    The incumbents efforts are real, and they’re clearly on the right path for the purpose of this site—as long as they follow through. Filling out a questionnaire, 
-                    doing an introductory radio interview, and sitting down for a more detailed podcast later in the season doesn’t take much more than an afternoon’s worth of focused work. 
-                    That alone would ensure every voter has a consolidated, accessible way to understand where they stand.
-                    <br>
-                    <br>
-                    It’s worth noting that while Antwan has already joined me for a radio interview and Erik plans to do the same, plus both have expressed interest in a longer-form 
-                    podcast. So again, as long as the follow-through occurs, voters should have a clear picture from them.
-                    <br>
-                    <br>
-                    On the Democratic side, Carolyn Rush has set the standard for engagement so far. She sat down for a 2.5-hour interview to go through her platform in depth and is 
-                    scheduled to appear on the radio show again next week, where we’ll specifically address some of the topics Antwan and I discussed. This kind of ongoing dialogue is 
-                    exactly what should be happening in every primary and general election—candidates clearly laying out where they agree, where they differ, and how they plan to 
-                    represent their district.
-                    <br>
-                    <br>
-                    Carol Sabo, meanwhile, has been in sporadic contact for over a month about filling out a questionnaire or scheduling an interview, but nothing concrete has 
-                    happened yet. The only information I’ve found about her platform came after five separate outreach attempts, and her campaign site doesn't go into much depth. 
-                    That said, just like the county Democrats, her accessibility rating could improve dramatically with just an afternoon’s worth of work between now and November.
-                    <br>
-                    <br>
-                    To be clear, I’m not asking any of these candidates to divulge every detail of legislative negotiations or to produce hours of inside baseball on how bills get 
-                    passed. I’m asking for something much simpler: clear, easily accessible statements of their priorities and plans—like the campaign sites Senator Testa and Candidate 
-                    Perella eventually set up when this project first began.
-                    <br>
-                    <br>
-                    At this point in the election cycle, anything could still happen. Campaigns can ramp up or fall off. New issues can surface. Promises of transparency can become 
-                    reality—or remain just that: promises.
-                    <br>
-                    <br>
-                    Either way, I’ll be watching closely so Cumberland County voters don’t have to navigate it all alone.
-                    </p>
+                This November, voters in <strong>Legislative District 1</strong> will decide who fills the district’s two Assembly seats, covering all of 
+                Cape May County and parts of Cumberland and Atlantic counties. 
+                Mail-in ballots have already been sent out, and the first gubernatorial debate of the season took place last Sunday—setting the stage for 
+                the home stretch of this election cycle.
+                </p>
+                <br><br>
+                <p>
+                All four Assembly candidates—Republicans <em>Antwan McClellan</em> and <em>Erik Simonsen</em>, and Democrats <em>Carolyn Rush</em> and 
+                <em>Carol Sabo</em>—have presented updated websites and completed radio interviews with InformTheVoteNJ. 
+                This level of participation reflects the kind of baseline transparency and accessibility that should become the standard for local races. 
+                Each has also agreed to follow-up conversations, so there is opportunity for voters to see a deeper comparison of priorities and plans 
+                as the campaign continues.
+                </p>
+                <br><br>
+                <p>
+                <em>Carolyn Rush</em> should be acknowledged for being the first to step up this year with a full 2.5-hour podcast alongside her then 
+                ticket-mate Brandon Saffold during the primary season. 
+                That interview and her radio interview remains one of the most pressing on this platform to date and sets a benchmark for long-form voter 
+                engagement. 
+                As a one-person operation, pressing each of the other candidates for equally detailed follow-ups will take time and planning, but the 
+                opportunity is there and will be pursued thoughtfully.
+                </p>
+                <br><br>
+                <p>
+                At this point in the election cycle, anything can still happen. Campaigns can ramp up or fall off. 
+                New issues can surface. Promises of transparency can become reality—or remain just that: promises. 
+                InformTheVoteNJ will continue working to provide consolidated, accessible information so that voters in Cumberland County and the rest of 
+                LD-1 don’t have to navigate it all alone.
+                </p>
             </details>
         </div>
 
