ld3 quick intro update

--- a/child_pages/cc-elections/state_assembly_legislative_district_3.html
+++ b/child_pages/cc-elections/state_assembly_legislative_district_3.html
@@ -273,39 +273,27 @@
             <details>
                 <summary style="cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
                 <p>
-                    The General Assembly race in New Jersey’s 3rd Legislative District features two seats up for election. While this district mostly covers Gloucester and Salem counties, 
-                    it includes parts of Cumberland County representing about 17,000 people—so it deserves attention here.
-                    <br>
-                    <br>
-                    On the Republican side, Chris Konawel and Lawrence Moore are running unopposed. Like other local Republicans, they’ve often been accessible through the bi-weekly breakfasts in 
-                    the past. But with those meetings now closed to non-Republicans, any updates that might have been shared there are no longer readily available to the wider public.
-                    <br>
-                    <br>
-                    I tried to meet both candidates in person to help establish trust and open lines of communication. I attended a Harrison Township meeting specifically hoping to connect with 
-                    Lawrence Moore, but he was absent that evening. Some of his colleagues said they would pass along my message and materials, but so far, there has been no reply. This is a 
-                    good example of how cumbersome and hit-or-miss the process can be, even when you make the effort to show up in person.
-                    <br>
-                    <br>
-                    I did speak briefly with Chris Konawel at a bi-weekly breakfast, so he is aware of this outreach and the platform I’m offering. But to date, neither candidate has provided 
-                    detailed campaign information or followed up to schedule interviews. To be fair, Konawel did make some brief campaign-related statements at a breakfast and he does appear to be 
-                    picking up steam on social media, but we'll see how it plays out throughout the season.
-                    <br>
-                    <br>
-                    On the Democratic side, Heather Simmons and Dave Bailey also ran unopposed in the primary. While I haven’t been able to connect with either directly despite multiple attempts by 
-                    email, phone, and mail, it’s worth noting that Dave Bailey did make an appearance at the Cumberland County Fair. That’s an example of the kind of event where connecting in person 
-                    could have been possible—especially considering he and I spoke last year at Deerfield Day, where he expressed support for this project. But since filing for re-election, it’s been 
-                    difficult to re-establish contact.
-                    <br>
-                    <br>
-                    As with every race, the goal here isn’t complicated:
-                    Filling out a candidate questionnaire, recording an introductory interview, and planning a more detailed conversation later in the season would take an afternoon or two at most.
-                    And it doesn't have to be created through my platform: If comprehensive info exists elsewhere, I'll just copy/paste it onto my website. That’s all it takes to give voters a 
-                    clear, consolidated, and accessible view of each candidate’s priorities—without having to spend weeks piecing together scattered appearances and social media posts.
-                    <br>
-                    <br>
-                    With all four candidates expected to advance to the general election, this is the perfect time for them to step forward, clarify where they stand, and make it easy for regular 
-                    voters to get informed.
+                The General Assembly race in New Jersey’s <strong>3rd Legislative District</strong> features two seats up for election. 
+                While this district mostly covers Gloucester and Salem counties, it includes parts of Cumberland County representing about 17,000 people—so 
+                it deserves attention here.
                 </p>
+                <br><br>
+                <p>
+                On the Republican side, <em>Chris Konawel</em> and <em>Lawrence Moore</em> are challenging the Democrat incumbents. 
+                Both have recently presented campaign websites, which is a step toward greater accessibility. 
+                Konawel has also opened up for a brief statement about his knowledge of priorities for the overlapping sections of Gloucester and Cumberland 
+                Counties. 
+                These developments mark some progress compared to earlier in the season when no detailed information was readily available to the public aside 
+                from scattered social media posts.
+                </p>
+                <br><br>
+                <p>
+                On the Democratic side, <em>Heather Simmons</em> and <em>Dave Bailey</em> ran unopposed in the primary. 
+                Despite multiple expressions of interest from both to participate in InformTheVoteNJ’s voter information efforts, no follow-through has 
+                occurred thus far, and no campaign websites have been identified for them. 
+                Scattered social media posts remain the main source of information currently available.
+                </p>
+                
             </details>
         </div>
         <!-- <button class="quick-summary-reopen">quick election summary</button> -->
