gubernatorial quick intro update

--- a/child_pages/cc-elections/governor.html
+++ b/child_pages/cc-elections/governor.html
@@ -228,32 +228,39 @@
 
             <details>
                 <summary style="text-align:center; cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
-                As of August 29, 2025, we are nearly two months past the primaries that set up Jack Ciattarelli as the Republican nominee and Mikie Sherrill as the 
-                Democratic nominee. 
-                With just about two months left until Election Day, we’re arguably in the middle of campaign season. I say “arguably” because the reality is that 
-                mail-in ballots go out in roughly 
-                three weeks—meaning voters who rely on them are already on a ticking clock to make their decisions. 
-
+                <p>
+                As of September 23, 2025, New Jersey’s gubernatorial race is fully underway. 
+                We are well past the primaries that set up <strong>Jack Ciattarelli</strong> as the Republican nominee and <strong>Mikie Sherrill</strong> as 
+                the Democratic nominee. 
+                With mail-in ballots already being cast and the first debate having taken place last Sunday, voters who use early voting are already on a 
+                ticking clock to make their decisions.
+                </p>
                 <br><br>
+                <p>
                 The first step for any voter should be to review the candidates’ own source material—campaign websites, social media activity, interviews, and 
                 coverage from established outlets. 
-                Robust statewide reporting of this race already exists.  
-
+                Robust statewide reporting of this race exists. 
+                However, for those who prefer a more local lens, here’s what stands out so far for Cumberland County.
+                </p>
                 <br><br>
-                However, if you prefer a more local lens, here’s what stands out so far for Cumberland County: Ciattarelli has been undeniably more visible here. 
-                He has appeared at 
-                Republican bi-weekly breakfasts, the Puerto Rican Festival Parade, nearby rallies, and other events. That consistency signals not only that he 
-                shows up, but that he 
-                is building visibility with local representatives—relationships that could prove useful if the county needs state-level help. If he continues by 
-                demonstrating real 
-                understanding of our issues and offering concrete plans, he will build a strong case for local support.  
-
+                <p>
+                <em>Jack Ciattarelli</em> has continued making himself present in Cumberland County at public events and recently held a well-advertised 
+                town hall in Pitman, which InformTheVoteNJ attended. 
+                At that event he addressed a Cumberland-specific question by emphasizing the need for agricultural support, a Department of Commerce to help 
+                with economic development, and state agencies that “work for the people.” 
+                This ongoing visibility signals not only that he shows up but also that he is building relationships with local representatives—connections 
+                that could matter if the county needs state-level help.
+                </p>
                 <br><br>
-                Sherrill, by contrast, has only recently begun to appear in the South Jersey landscape, often at smaller or unadvertised events. This makes it 
-                difficult for voters 
-                to raise concerns directly and equally difficult for outlets like this one to connect her potential vision for Cumberland County with the public. 
-                Even a neighboring 
-                district’s representative recently remarked, “We haven’t gotten to know her real well yet.”  
+                <p>
+                By contrast, <em>Mikie Sherrill</em> has only recently begun appearing in the South Jersey landscape. 
+                She made an appearance at the Green Olive 2, which appeared to be an invite-only meeting for leadership, and is reportedly holding a rally at 
+                the Ramada Inn on Saturday the 27th. 
+                A rally, however, typically does not leave much room for press questions, and it is expected she will deliver her statewide stump speech 
+                rather than a Cumberland-specific message. 
+                With ballots already going out and the first debate behind us, Ciattarelli currently shows more presence and connections in the area—at 
+                least in ways visible to the public—while Sherrill’s local outreach remains light.
+                </p>
 
                 <br><br>
             </details>
