--- a/child_pages/contact.html
+++ b/child_pages/contact.html
@@ -44,10 +44,10 @@
                             <input type="checkbox" name="accordion" id="first">
                             <label for="first">County and Municipal Elections</label>
                             <div class="nested-burger-links">
-                                <li class="link"><a href="child_pages/cc-elections/cc_county_commissioners_2024.html">Cumberland County Commissioners</a></li>
-                                <li class="link"><a href="child_pages/cc-elections/fairfield_township_committee.html">Fairfield Township Committee</a></li>
+                                <li class="link"><a href="cc-elections/cc_county_commissioners_2024.html">Cumberland County Commissioners</a></li>
+                                <li class="link"><a href="cc-elections/fairfield_township_committee.html">Fairfield Township Committee</a></li>
 
-                                <li class="link"><a href="child_pages/cc-elections/millville_commissioners_2024.html">Millville City Commissioners</a></li>
+                                <li class="link"><a href="cc-elections/millville_commissioners_2024.html">Millville City Commissioners</a></li>
                                 <!-- <li class="link"><a href="child_pages/cc-elections/commercial_township_committee.html">Commercial Township Committee</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/downe_township_committee.html">Downe Township Committee</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/lawrence_township_committee_2024.html">Lawrence Township Committee</a></li> -->
@@ -63,13 +63,13 @@
                             <input type="checkbox" name="accordion" id="second">
                             <label for="second">School Board Elections</label>
                             <div class="nested-burger-links">
-                                <li class="link"><a href="child_pages/cc-elections/bridgeton_school_board_2024.html">Bridgeton School Board</a></li>
-                                <li class="link"><a href="child_pages/cc-elections/commercial_school_board_2024.html">Commercial Township School Board</a></li>
-                                <li class="link"><a href="child_pages/cc-elections/hopewell-shiloh_school_board.html">Hopewell-Shiloh School Board</a></li>
+                                <li class="link"><a href="cc-elections/bridgeton_school_board_2024.html">Bridgeton School Board</a></li>
+                                <li class="link"><a href="cc-elections/commercial_school_board_2024.html">Commercial Township School Board</a></li>
+                                <li class="link"><a href="cc-elections/hopewell-shiloh_school_board.html">Hopewell-Shiloh School Board</a></li>
                                 
                                 <!-- <li class="link"><a href="child_pages/cc-elections/fairfield_school_board_2024.html">Fairfield Township School Board</a></li> -->
-                                <li class="link"><a href="child_pages/cc-elections/lawrence_township_school_board.html">Lawrence Township School Board</a></li>
-                                <li class="link"><a href="child_pages/cc-elections/vsb_2024.html">Vineland School Board</a></li>
+                                <li class="link"><a href="cc-elections/lawrence_township_school_board.html">Lawrence Township School Board</a></li>
+                                <li class="link"><a href="cc-elections/vsb_2024.html">Vineland School Board</a></li>
                             </div>
                         </div>
 
@@ -77,9 +77,9 @@
                             <input type="checkbox" name="accordion" id="third">
                             <label for="third">Governor and State Elections</label>
                             <div class="nested-burger-links">
-                                <li class="link"><a href="child_pages/cc-elections/state_assembly_legislative_district_1.html">State Assembly - 1st Legislative District</a></li>
-                                <li class="link"><a href="child_pages/cc-elections/state_assembly_legislative_district_3.html">State Assembly - 3rd Legislative District</a></li>
-                                <li class="link"><a href="child_pages/cc-elections/governor.html">Governor</a></li>
+                                <li class="link"><a href="cc-elections/state_assembly_legislative_district_1.html">State Assembly - 1st Legislative District</a></li>
+                                <li class="link"><a href="cc-elections/state_assembly_legislative_district_3.html">State Assembly - 3rd Legislative District</a></li>
+                                <li class="link"><a href="cc-elections/governor.html">Governor</a></li>
                                 <!-- <li class="link"><a href="child_pages/cc-elections/house_of_representatives_2024.html">US House of Representatives, NJ's 2nd Congressional District</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/us_senate_2024.html">US Senate, NJ</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/cc_vice_president_2024.html">US Vice President</a></li>
@@ -91,24 +91,24 @@
                             <input type="checkbox" name="accordion" id="fourth">
                             <label for="fourth">Issues</label>
                             <div class="nested-burger-links">
-                                <li class="link"><a href="child_pages/cc-elections/cc_election_issues.html">Cumberland County Issues</a></li>
-                                <li class="link"><a href="child_pages/cc-elections/fairfield_township_committee.html">Fairfield Township Issues</a></li>
+                                <li class="link"><a href="cc-elections/cc_election_issues.html">Cumberland County Issues</a></li>
+                                <li class="link"><a href="cc-elections/fairfield_township_committee.html">Fairfield Township Issues</a></li>
 
-                                <li class="link"><a href="child_pages/cc-elections/millville_city_issues.html">Millville City Issues</a></li>
-                                <li class="link"><a href="child_pages/cc-elections/bridgeton_school_board_issues.html">Bridgeton School Board Issues</a></li>
-                                <li class="link"><a href="child_pages/cc-elections/commercial_school_board_issues.html">Commercial School Board Issues</a></li>
-                                <li class="link"><a href="child_pages/cc-elections/hopewell-shiloh_school_board_Issues.html">Hopewell-Shiloh School Board Issues</a></li>
-                                <li class="link"><a href="child_pages/cc-elections/lawrence_school_board_issues.html">Lawrence School Board Issues</a></li>
+                                <li class="link"><a href="cc-elections/millville_city_issues.html">Millville City Issues</a></li>
+                                <li class="link"><a href="cc-elections/bridgeton_school_board_issues.html">Bridgeton School Board Issues</a></li>
+                                <li class="link"><a href="cc-elections/commercial_school_board_issues.html">Commercial School Board Issues</a></li>
+                                <li class="link"><a href="cc-elections/hopewell-shiloh_school_board_Issues.html">Hopewell-Shiloh School Board Issues</a></li>
+                                <li class="link"><a href="cc-elections/lawrence_school_board_issues.html">Lawrence School Board Issues</a></li>
 
-                                <li class="link"><a href="child_pages/cc-elections/vsb_2024_issues.html">Vineland School Board Issues</a></li>
+                                <li class="link"><a href="cc-elections/vsb_2024_issues.html">Vineland School Board Issues</a></li>
 
                                 <!-- <li class="link"><a href="child_pages/cc-elections/commercial_township_issues.html">Commercial Township Issues</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/downe_township_issues.html">Downe Township Issues</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/lawrence_township_issues.html">Lawrence Township Issues</a></li> -->
 
-                                <li class="link"><a href="child_pages/cc-elections/state_assembly_legislative_district_1_issues.html">State Assembly - Legislative District 1 Issues</a></li>
-                                <li class="link"><a href="child_pages/cc-elections/state_assembly_legislative_district_3_issues.html">State Assembly - Legislative District 3 Issues</a></li>
-                                <li class="link"><a href="child_pages/cc-elections/governor_issues.html">Governor Issues</a></li>
+                                <li class="link"><a href="cc-elections/state_assembly_legislative_district_1_issues.html">State Assembly - Legislative District 1 Issues</a></li>
+                                <li class="link"><a href="cc-elections/state_assembly_legislative_district_3_issues.html">State Assembly - Legislative District 3 Issues</a></li>
+                                <li class="link"><a href="cc-elections/governor_issues.html">Governor Issues</a></li>
                                 <!-- <li class="link"><a href="child_pages/cc-elections/cc_county_clerk_issues.html">County Clerk Issues</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/millville_city_issues.html">Millville City Issues</a></li>
                                 <li class="link"><a href="child_pages/cc-elections/vsb_2024_issues.html">Vineland School Board Issues</a></li>
