dual modal abandoned gregoire page

--- a/child_pages/cc-elections/Candidates/gregoire.html
+++ b/child_pages/cc-elections/Candidates/gregoire.html
@@ -238,7 +238,26 @@
         
       </div>
 
-      <button id="quick-summary-reopen" class="quick-sum">quick summary</button>
+      <!-- <button id="quick-summary-reopen" class="quick-sum">quick summary</button> -->
+       <details class="can-sec" id="quick-summary">
+                <summary style="color: blue;">
+                    <strong>Quick Summary</strong>
+                </summary>
+                <p>
+                Daniel Gregoire has lived in Millville since 2012 and brings 40+ years in water/wastewater systems, quality control, and field operations. He presents himself as a hands-on, 
+                whole-systems problem-solver with leadership experience in the Knights of Columbus. His priorities: clean up the city and fix “first impressions,” hire an experienced economic 
+                development lead (funded via grants/bonds), grow the ratable base, and use pragmatic incentives so Millville competes with neighboring towns. He links storefront blight, stray 
+                shopping carts, panhandling, and homelessness to investor confidence and favors coordinated solutions with staffing, community partners, and a designated point person.
+                </p>
+                <br>
+                <p>
+                He also calls for more road repairs (with clarity on street-opening funds), a regional strategy on illegal ATVs/dirt bikes, and stronger code enforcement—including moving abandoned 
+                properties to rehab-minded owners. Internally, he argues the city is short-staffed and under-equipped; he’d seek grants (e.g., Clean Communities) for hires and a second street sweeper, 
+                with city-wide sweeping and park/street care. On communication, he wants plain-English explanations of policy changes, follow-through on public comments, and a suggestion email/box; 
+                for utilities, he prefers payment plans and tax-sale tools over shutting off water for families in hardship. His pitch: unite employees and residents, execute visibly, and make 
+                Millville competitive again.
+                </p>
+            </details>
 
       <div class="election-date">
         <p>This election is on November 4th, 2025</p>
@@ -257,7 +276,19 @@
       <button class="candidate-ext-site">Transparency Standards Explained</button>
     </a>
     <img class="gauge" src="../../../assets/gauge_okay.svg" alt="">
-    <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
+    <!-- <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button> -->
+     <p>
+      Gregoire provided a combined written response and sat-down for an interview that clarified background and priorities—stronger engagement than 
+      the local baseline. He outlines specific, testable ideas (hire an economic lead; city-wide sweeping; improve abandoned-property pipeline; 
+      alternative paths to water-bill collection; suggestion box/email) and ties them to funding concepts (grants/bonds/Clean Communities).
+      <br><br>
+
+      To move toward a top-tier transparency rating, we’ll look for: (1) a centralized, consitently-updating web presence; (2) consistent public 
+      availability (events, forums, long-form interviews); (3) concrete, time-bound plans/budgets for staffing/equipment; and (4) follow-through 
+      on communications promises (e.g., documented responses to resident input). Also, with the recent plane banner at the Millville football game, it might be time to make an official ticket 
+      announcement for Sooy, McGinty, and Gregoire. For now, the rating sits at <em>“Above Average 
+        (trending upwards)”</em> based on responsiveness and clear themes laid out early.
+        </p>
   </div>
 
   <br><br>
