sooy transparency explanation section fixed

--- a/child_pages/cc-elections/Candidates/gregoire.html
+++ b/child_pages/cc-elections/Candidates/gregoire.html
@@ -277,18 +277,23 @@
     </a>
     <img class="gauge" src="../../../assets/gauge_okay.svg" alt="">
     <!-- <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button> -->
-     <p>
-      Gregoire provided a combined written response and sat-down for an interview that clarified background and priorities—stronger engagement than 
-      the local baseline. He outlines specific, testable ideas (hire an economic lead; city-wide sweeping; improve abandoned-property pipeline; 
-      alternative paths to water-bill collection; suggestion box/email) and ties them to funding concepts (grants/bonds/Clean Communities).
-      <br><br>
+     <details class="can-sec" id="transparency-accessibility">
+            <summary style="color: blue;">
+                <strong>Explanation</strong>
+            </summary>
+        <p>
+          Gregoire provided a combined written response and sat-down for an interview that clarified background and priorities—stronger engagement than 
+          the local baseline. He outlines specific, testable ideas (hire an economic lead; city-wide sweeping; improve abandoned-property pipeline; 
+          alternative paths to water-bill collection; suggestion box/email) and ties them to funding concepts (grants/bonds/Clean Communities).
+          <br><br>
 
-      To move toward a top-tier transparency rating, we’ll look for: (1) a centralized, consitently-updating web presence; (2) consistent public 
-      availability (events, forums, long-form interviews); (3) concrete, time-bound plans/budgets for staffing/equipment; and (4) follow-through 
-      on communications promises (e.g., documented responses to resident input). Also, with the recent plane banner at the Millville football game, it might be time to make an official ticket 
-      announcement for Sooy, McGinty, and Gregoire. For now, the rating sits at <em>“Above Average 
-        (trending upwards)”</em> based on responsiveness and clear themes laid out early.
-        </p>
+          To move toward a top-tier transparency rating, we’ll look for: (1) a centralized, consitently-updating web presence; (2) consistent public 
+          availability (events, forums, long-form interviews); (3) concrete, time-bound plans/budgets for staffing/equipment; and (4) follow-through 
+          on communications promises (e.g., documented responses to resident input). Also, with the recent plane banner at the Millville football game, it might be time to make an official ticket 
+          announcement for Sooy, McGinty, and Gregoire. For now, the rating sits at <em>“Above Average 
+            (trending upwards)”</em> based on responsiveness and clear themes laid out early.
+            </p>
+      </details>
   </div>
 
   <br><br>
