--- a/child_pages/cc-elections/Candidates/sooy.html
+++ b/child_pages/cc-elections/Candidates/sooy.html
@@ -632,7 +632,36 @@
             <button class="candidate-ext-site">Transparency Standards Explained</button>
             </a>
             <img class="gauge" src="../../../assets/gauge_okay.svg" alt="">
-            <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
+            <!-- <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button> -->
+             <details class="can-sec" id="transparency-accessibility">
+            <summary style="color: blue;">
+                <strong>Explanation</strong>
+            </summary>
+            <p>
+            In conversation, Sooy shows a command of details and a willingness to defend trade-offs, often grounding answers in the mechanics of projects, 
+            ordinances, or finance rules. That clarity is valuable, but what rounds out a strong campaign is how accessible that clarity becomes to the public.
+            <br>
+            <br>
+            Over the past few weeks, he has taken visible steps in that direction. He’s scheduled a second appearance on the InformTheVoteNJ Radio Hour 
+            (9/21), sat down for a separate interview with content creator JT Burks, is planning a meet-and-greet event open to all candidates, and 
+            will attend a second candidates’ forum at the Four Seasons living community. These activities broaden the ways voters can hear directly 
+            from him beyond City Hall and long meetings.
+            <br>
+            <br>
+            Millville’s political culture often looks contentious on camera, and Sooy doesn’t shy from that. He argues open debate is part of 
+            accountability—even when bluntness is labeled as “mean.” By pairing that willingness to engage with more structured outreach, he is starting 
+            to make his transparency and process-based approach visible in settings where residents aren’t tuning in to full meetings or multi-hour interviews.
+            <br>
+            <br>
+            From an InformTheVoteNJ standpoint, Sooy currently rates above average, for transparency and accessibility because he engages 
+            directly and 
+            provides detailed answers. With the planned public events and additional media appearances, he’s moving closer to “top tier.” The remaining 
+            steps are classic, proactive transparency markers in 2025: creating his own comprehensive campaign website—rather than relying on press 
+            coverage—and clarifying ticket or slate affiliations (especially after the recent plane banner over the Millville football game raised questions 
+            about whether he, McGinty, and Gregoire are <strong>formally</strong> running together). Taking those actions would signal a full embrace of the higher standard 
+            of openness now expected in Cumberland County campaigns.
+            </p>
+        </details>
         </div>
 
         <br><br>
