green transparency explanation added

--- a/child_pages/cc-elections/Candidates/green.html
+++ b/child_pages/cc-elections/Candidates/green.html
@@ -394,7 +394,13 @@
             <summary style="color: blue;">
                 <strong>Explanation</strong>
             </summary>
-            
+            Rachel Green has taken notable steps to inform voters by launching a full campaign website and participating in an interview with JT Burks. This puts her effort above the current 
+            status quo in Cumberland County, where many candidates still rely on scattered posts or press coverage rather than centralizing their information.
+            <br>
+            <br>
+            That said, some of her plans are light on details about how they would be implemented, and there has not yet been a clearly advertised, public-facing meet-and-greet event. With mail-in 
+            ballots already distributed, the window to reach voters directly is narrowing. If Green were to host more public events and take part in a more pressing, detail-oriented interview 
+            format, she would be well on her way to a top-tier transparency rating.
         </details>
     </div> 
        
