--- a/child_pages/cc-elections/Candidates/mcginty.html
+++ b/child_pages/cc-elections/Candidates/mcginty.html
@@ -292,7 +292,28 @@
 
              </div>
 
-             <button id="quick-summary-reopen" class="quick-sum">quick summary</button>
+             <!-- <button id="quick-summary-reopen" class="quick-sum">quick summary</button> -->
+              <details class="can-sec" id="quick-summary">
+                <summary style="color: blue;">
+                    <strong>Quick Summary</strong>
+                </summary>
+                <p> Thomas McGinty is running for Millville City Commissioner on a practical platform of cleanup, safety, and redevelopment. A lifelong 
+                    Millville resident, he brings decades of experience as a geologist and NJDEP federal case manager in hazardous-site remediation, plus 
+                    frontline leadership as a retired NJDOC lieutenant. Early in the campaign he answered a detailed questionnaire, completed a 2.5-hour 
+                    podcast, and sat for a full radio interview—giving voters a clear sense of his background, governing style, and priorities. 
+                    <br> <br> 
+                    His 2025 agenda centers on converting legacy industrial parcels—especially the Wheaton property—into brownfield-ready sites and then 
+                    doing the administrative push to land tenants. He pairs that with strengthening public safety and recruitment (including visible walking 
+                    patrols and better inter-agency coordination), tighter code enforcement and fair/open bidding, and setting predictable service standards 
+                    at City Hall. McGinty also wants Millville to leverage the Maurice River’s eco-tourism potential and advance long-discussed access 
+                    improvements like the Outer Connector/Nabb Avenue Extension to better link jobs, the airport, and industrial corridors. He frames himself 
+                    as a team-first, “nuts-and-bolts” commissioner focused on execution rather than titles. 
+                    <br> <br> Transparency and accessibility are currently <em>above average</em> by local norms, thanks to early, substantive engagement. 
+                    To reach a top-tier standard, he has signaled interest in a clean campaign site with issue-by-issue pages, a public calendar of 
+                    appearances, documented Q&amp;A and interviews, and measurable milestones for brownfields, blight/code benchmarks, and youth-safety 
+                    initiatives. If those pieces are delivered and kept current, voters will be able to track both plans and follow-through in one place. 
+                    </p>
+            </details>
 
              <div class="election-date">
                  <p>This election is on November 4th, 2025</p>
@@ -317,7 +338,46 @@
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
         <img class="gauge" src="../../../assets/gauge_okay.svg" alt="">
-        <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
+        <!-- <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button> -->
+         <details class="can-sec" id="transparency-accessibility">
+            <summary style="color: blue;">
+                <strong>Explanation</strong>
+            </summary>
+            <p><strong>Why he lands here:</strong><br>
+                Right out of the gate, Thomas McGinty answered my questionnaire, had already completed a 2.5-hour podcast interview, and quickly booked a full radio hour 
+                through my platform. From those touchpoints alone, I can form a solid picture of his background (geologist / hazardous-site mitigation), overall vision 
+                (remediation & redevelopment), an actionable agenda (Wheaton/brownfields, public safety, code enforcement), and early stances on key issues. That’s more 
+                engagement and usable substance than I typically get at this stage from first-time or lesser-known candidates.</p>
+                <br>
+                <br>
+                <p><strong>Context that matters:</strong><br>
+                We’re reaching a point where the gap between “average,” “above average,” and “top-tier” is shaped as much by the Cumberland County status quo as by any one 
+                candidate’s effort. If campaigns rarely advertise meet-and-greets or fair appearances, there’s less to attend. If there’s no standard candidate forum or 
+                debate at the school board/city/county levels, no one can show up for it. And if winning candidates routinely skip publishing clear issue pages or agendas, 
+                it’s unrealistic to expect new contenders to roll out state-level, fully sourced platforms on day one.</p>
+                <br>
+                <br>
+                <p><strong>What would move McGinty to “Top-Tier” transparency here:</strong></p>
+                <ul style="margin-top:0;">
+                    <li><strong>Central hub:</strong> Publish a clean campaign site with résumé, <em>issue-by-issue</em> pages, and concise summaries linked to source materials (reports, ordinances, statutes, data).</li>
+                    <li><strong>Public calendar:</strong> Proactively post upcoming appearances (forums, meet-and-greets, radio/podcasts) and archive past events with links/clips.</li>
+                    <li><strong>Open Q&amp;A:</strong> Participate in any neutral forum offered; if none exists, host a basic town-hall/Q&amp;A and accept neutral moderation.</li>
+                    <li><strong>Document the record:</strong> Keep a page of questionnaires answered, interviews completed, and one-page stance summaries (downloadable PDF for voters).</li>
+                    <li><strong>Specifics &amp; follow-through:</strong> Translate themes into timelines/metrics (e.g., Wheaton/brownfield milestones, blight/code-enforcement benchmarks, youth-program partners).</li>
+                    <li><strong>Contact &amp; response norms:</strong> Publish contact methods and typical response windows; consider office hours.</li>
+                </ul>
+                <br>
+                <br>
+                <p><strong>What could slide him back toward “Average”:</strong><br>
+                If the initial burst of access fades, if action plans on youth/safety/blight remain vague, or if there’s no central, updated hub for voters to track positions 
+                and appearances, the rating would likely settle closer to the county norm.</p>
+                <br>
+                <br>
+                <p><strong>Bottom line:</strong><br>
+                McGinty currently clears the local bar for transparency and accessibility—decisively. He’s engaging, available, and substantive enough for voters to understand 
+                who he is and what he wants to do. He’s not yet at the polished, deeply sourced standard you might see from statewide figures (think Steven Fulop or Andy Kim), 
+                but with a public calendar, an issue hub, and measurable follow-through, he could get there.</p>
+        </details>
     </div> 
 
     <br><br>
