adjusted width of events calendar

--- a/child_pages/events.html
+++ b/child_pages/events.html
@@ -197,7 +197,7 @@
         <h2>Regularly Occurring Events</h2>
             <br>
             <br>
-        <iframe src="https://calendar.google.com/calendar/embed?src=b264362cf56c511af6726a839e4014a7193d315fe8b21d24125d029a1cb116b3%40group.calendar.google.com&ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+        <iframe class='calendar' src="https://calendar.google.com/calendar/embed?src=b264362cf56c511af6726a839e4014a7193d315fe8b21d24125d029a1cb116b3%40group.calendar.google.com&ctz=America%2FNew_York" style="border: 0" height="600" frameborder="0"></iframe>
     </div>      
 </body>
 </html>
