chrichello update test

--- a/child_pages/cc-elections/Candidates/broomhall.html
+++ b/child_pages/cc-elections/Candidates/broomhall.html
@@ -10,10 +10,10 @@
         <script src="../../../dual_model_candidate.js" async></script>
         <title>Inform The Vote</title>
         <meta property="og:type" content="website">
-        <meta property="og:title" content="Candidate Victoria Broomall">
+        <meta property="og:title" content="Candidate Victoria Broomhall">
         <meta property="og:description" content="Running For Millville City Commission">
         <meta property="og:image" content="https://www.informthevotenj.com/assets/candidates/">
-        <meta property="og:url" content="https://www.informthevotenj.com/child_pages/cc-elections/candidates/Broomall">
+        <meta property="og:url" content="https://www.informthevotenj.com/child_pages/cc-elections/candidates/Broomhall">
     </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-64FQD2P8BV"></script>
@@ -139,7 +139,7 @@
             <div class="modal-content">
               <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" id="close1" class="close">
               <h4 class="quick-sum">quick summary</h4>
-              <h6 class="page-title">Victoria Broomall</h6>
+              <h6 class="page-title">Victoria Broomhall</h6>
               <p>          
 
                 As of 7/8/2025, we still don't have any information on this candidate. As a reminder, we reach out through information obtained through whichever clerk's office 
@@ -158,7 +158,7 @@
             <div class="modal-content">
               <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" id="close2" class="close">
               <h4 class="quick-sum">Rating Explanation</h4>
-              <h6 class="page-title">Victoria Broomall</h6>
+              <h6 class="page-title">Victoria Broomhall</h6>
               <p>          
 
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -220,7 +220,7 @@
     </div>
 
      <div class="title-info">
-        <h2>Victoria Broomall</h2>
+        <h2>Victoria Broomhall</h2>
          <div class="running-for">
              <div class="running-title">Running for: </div>
              <div class="position">Millville City Commissioner</div>
