--- a/child_pages/cc-elections/millville_commissioners_2024.html
+++ b/child_pages/cc-elections/millville_commissioners_2024.html
@@ -255,7 +255,7 @@
                 <strong>Mid-tier levels of response</strong> have come from Sherman Taylor, Marissa Ranello, Heather Garisson, Daniel Gregoire, 
                 Carole Cossaboon, Richard Kott, and David Summers. 
                 <strong>Less responsive to date</strong> have been Joseph Derella, Roy Sheppard, Carmine Delvicario, Newell Branin, Benjamin Romanik, and 
-                Victoria Broomall.
+                Victoria Broomhall.
                 </p>
                 <br><br>
                 <p>
@@ -1362,7 +1362,7 @@
                                 <p>Independent</p> 
                             </div>
                             <div class="first-name">
-                                <a href="Candidates/broomall.html">Victoria</a>
+                                <a href="Candidates/broomhall.html">Victoria</a>
                             </div>
                             <div class="number-a-and-circle"> 
                                 <p>1J</p>
@@ -1371,7 +1371,7 @@
                         </div>
                         <div class="a-row-2">
                             <div class="last-name push-down-last-name">
-                                <a href="Candidates/broomall.html">Broomall</a>
+                                <a href="Candidates/broomhall.html">Broomhall</a>
                             </div>
                         </div>
                         <div class="a-row-3">
