chirichello update attempt 2

--- a/child_pages/cc-elections/Candidates/miletta_linda.html
+++ b/child_pages/cc-elections/Candidates/miletta_linda.html
@@ -164,20 +164,18 @@
         <h4 class="quick-sum">Rating Explanation</h4>
         <h6 class="page-title">Linda Miletta</h6>
         <p>
-        Relative to the Cumberland County status quo, Miletta’s response is <strong>slightly above average</strong>: she replied promptly
-        with a courteous, comprehensive cover letter that outlines her background and broad goals. That’s more than many candidates
-        provide.
-        <br><br>
-        However, the content remains <em>surface-level</em>. There are no specific positions on current district issues, no examples of
-        recent board decisions, no measurable targets, and no long-form interview or Q&amp;A to give voters deeper context. It’s enough
-        to signal competence and community service—and may be enough to win re-election—but it leaves an opening: if an opponent
-        supplies detailed, on-the-record stances (or participates in a substantive interview), voters may perceive that as stronger
-        transparency and preparedness.
-        <br><br>
-        As always, the goal here is not to micromanage campaigns but to reduce the scavenger hunt for voters. A brief, structured
-        follow-up (issue list, recent votes or initiatives, and a 30–60 minute interview) would quickly move this toward a higher tier.
-        <br><br>
-        Click the red x at the top of this box and then scroll down for more in-depth information and sources.
+            Relative to the Cumberland County status quo, Chirichello’s response is <strong>about average</strong>: he replied with a polite, 
+            clearly written email that introduces his background, priorities, and values. That alone is more than some first-time candidates provide 
+            and signals a willingness to engage with the public.
+            <br><br>
+            However, the content remains <em>surface-level</em>. There are no detailed positions on current district issues, no examples of how he 
+            would handle specific board decisions, no measurable targets, and no long-form interview or Q&amp;A to give voters deeper context. 
+            Because Chirichello is a newcomer to the township, the <strong>burden is even higher</strong> to make himself known and to demonstrate 
+            a grasp of local history, ongoing policies, and stakeholder concerns.
+            <br><br>
+            As always, the goal here is not to micromanage campaigns but to reduce the scavenger hunt for voters. A brief, structured follow-up—such 
+            as an issue list, recent observations or proposals, and a 30–60 minute interview—would quickly move this toward a higher tier and help 
+            close the familiarity gap created by his recent arrival.
         </p>
     </div>
     </dialog>
