chirichello transparency explanation moved to correct spot

--- a/child_pages/cc-elections/Candidates/chirichello.html
+++ b/child_pages/cc-elections/Candidates/chirichello.html
@@ -290,22 +290,18 @@
                 <strong>Explanation</strong>
             </summary>
             <p>
-                Dan Dixon has taken meaningful steps to make himself accessible and transparent as a candidate for Millville City Commission. His campaign website goes further than most of his peers by outlining his platform in detail, giving voters a clear sense of his priorities and values. He has also scheduled a meet-and-greet in the coming weeks, signaling a willingness to show up in person and take questions directly from the community. When I spoke with him by phone, he was responsive and straightforward: he acknowledged my questionnaire, explained he needed more time to prepare thoughtful answers, and made it clear he intends to follow through before moving into interviews.
-            </p>
-            <br>
-            <br>
-            <p>
-                That balance—having some strong public-facing materials while also asking for a little breathing room on deeper questions—puts Dixon in a position that is better than average, but still shy of the highest standard. And to note, the overwhelming amount of candidates in the county don’t reach top tier, because recent elections have raised the bar. Whether it’s Donald Trump doing a 3-hour podcast or Steven Fulop outlining 70 pages of policy, there are possibilities that go beyond the status quo of local politics. That being said, Dixon’s approach strongly suggests a candidate who values transparency and accessibility but is taking his time to make sure he does it the right way. In a county where voters too often get surface-level campaign blurbs, even this level of preparation already moves him into the “above average” category.
-            </p>
-            <br>
-            <br>
-            <p>
-                The question is what happens next. If Dixon follows through on his plan to complete the questionnaire, sit for interviews, and keep building a two-way channel with the public, he could easily rise into the top tier of transparency. The groundwork is there: he’s already engaging online, scheduling in-person events, and picking up the phone when asked. The next step is checking the remaining “beyond status quo” boxes. Sometimes it’s not about the individual candidate, but pushing the county towards a higher standard.
-            </p>
-            <br>
-            <br>
-            <p>
-                For now, Dixon earns an above-average transparency rating, with clear momentum toward the top tier. If he keeps building on what he has started, he could set a new expectation for what candidate accessibility looks like in Millville.
+                Relative to the Cumberland County status quo, Chirichello’s response is <strong>about average</strong>: he replied with a polite, 
+                clearly written email that introduces his background, priorities, and values. That alone is more than some first-time candidates provide 
+                and signals a willingness to engage with the public.
+                <br><br>
+                However, the content remains <em>surface-level</em>. There are no detailed positions on current district issues, no examples of how he 
+                would handle specific board decisions, no measurable targets, and no long-form interview or Q&amp;A to give voters deeper context. 
+                Because Chirichello is a newcomer to the township, the <strong>burden is even higher</strong> to make himself known and to demonstrate 
+                a grasp of local history, ongoing policies, and stakeholder concerns.
+                <br><br>
+                As always, the goal here is not to micromanage campaigns but to reduce the scavenger hunt for voters. A brief, structured follow-up—such 
+                as an issue list, recent observations or proposals, and a 30–60 minute interview—would quickly move this toward a higher tier and help 
+                close the familiarity gap created by his recent arrival.
             </p>
         </details>
     </div>  
