--- a/child_pages/cc-elections/Candidates/chirichello.html
+++ b/child_pages/cc-elections/Candidates/chirichello.html
@@ -223,7 +223,7 @@
         <h2>Ronny A. Chirichello</h2>
          <div class="running-for">
              <div class="running-title">Running for: </div>
-             <div class="position">Hopewell-Shiloh School Board</div>
+             <div class="position">Lawrence Township School Board</div>
          </div>
          <div class="incum-or-challenger">
              <div class="incumbent inactive">Incumbent</div>
@@ -233,7 +233,7 @@
      <div class="candidate-pic-box">
          <!-- <img class="cover" src="../../../assets/candidates/.jpg" class="candidate-pic"> -->
          <div class="candidate-pic-box-content">
-             <h4 class="sub-heading">Websites</h4>
+             <h4 class="sub-heading" style="text-align: center;">Websites</h4>
              <div class="website">
                  
                 <a href="https://www.facebook.com/ronchirichello" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Facebook</button></a>
@@ -280,7 +280,7 @@
      </div>
 
      <div class="gauge-box">
-        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Low </h4>
+        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Average </h4>
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
         <img class="gauge" src="../../../assets/gauge_dead_center.svg" alt="">
