chirichello pic added

--- a/child_pages/cc-elections/Candidates/chirichello.html
+++ b/child_pages/cc-elections/Candidates/chirichello.html
@@ -231,7 +231,7 @@
          </div>
      </div>
      <div class="candidate-pic-box">
-         <!-- <img class="cover" src="../../../assets/candidates/.jpg" class="candidate-pic"> -->
+         <img class="cover" src="../../../assets/candidates/chirichello.jpg" class="candidate-pic">
          <div class="candidate-pic-box-content">
              <h4 class="sub-heading" style="text-align: center;">Websites</h4>
              <div class="website">
